# ABS-Engine

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.pyw  version_info.txt
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: auto-assign.yml  ci.yml  greetings.yml  labeler.yml  pr-target-guard.yml  pylint.yml  release.yml
abs/: core.py  gui.py  saveload.py
data/scripts/: launch_game.py
dataa/scripts/: launch_game.py
docs/: README.md  accessing_the_console.md  debugging_games.md  game_file_structure.md  scenes.md  scripting.md  types.md  using_build_tools.md
engine/: __init__.py  __main__.py  build_tools.py  core.py  gui.py  logger.py  run.py  saveload.py  tcl_loader.py
engine/core/: __init__.py  image.py  types.py
engine/tcl/: theme.tcl
scripts/: player.py
