[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abs-engine"
version = "1.0.0"
description = "2D Game engine made by Above and Below Studios for public use."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Above and Below Studios" },
  { name = "Nathan C." }
]
dependencies = [
  "pygame>=2.6,<3",
  "colorama>=0.4.6,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
