[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abs-engine"
dynamic = ["version"]
description = "2D Game engine made by Natuworkguy for public use."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Nathan C." }
]
dependencies = [
  "pygame-ce>=2.6,<3",
  "colorama>=0.4.6,<1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "engine.version.__version__" }

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.interrogate]
exclude = [
  "engine/gui.py",
  "engine/version.py",
  "data/scripts/launch_game.py",
]
