[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abs-engine"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "2D Game engine made by Natuworkguy for public use."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Nathan C." }
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "engine.version.__version__" }

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.interrogate]
exclude = [
  "engine/gui.py",
  "engine/version.py",
  "data/scripts/launch_game.py",
]
